--- a/requirements.txt
+++ b/requirements.txt
@@ -1,92 +1,9 @@
--e git+https://github.com/quanticsoul4772/adaptive_mcp_server.git@124f14bfcc8728f7dc16e4bb4c5d6445cb223174#egg=adaptive_mcp_server
-annotated-types==0.7.0
-anthropic==0.45.2
-anyio==4.8.0
-blinker==1.9.0
-cachetools==5.5.2
-certifi==2025.1.31
-cffi==1.17.1
-charset-normalizer==3.4.1
-click==8.1.7
-colorama==0.4.6
-coverage==7.6.10
-distro==1.9.0
-fastapi==0.115.8
-filelock==3.17.0
-Flask==3.1.0
-fsspec==2025.2.0
-greenlet==3.1.1
-h11==0.14.0
-httpcore==1.0.7
-httpx==0.28.1
-huggingface-hub==0.28.1
-idna==3.10
-iniconfig==2.0.0
-itsdangerous==2.2.0
-Jinja2==3.1.6
-jiter==0.8.2
-jsonpatch==1.33
-jsonpointer==3.0.0
-langchain-core==0.3.33
-langgraph==0.2.69
-langgraph-checkpoint==2.0.10
-langgraph-sdk==0.1.51
-langsmith==0.3.4
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-mdurl==0.1.2
-msgpack==1.1.0
-nvidia-cuda-runtime-cu12==12.4.99
-nvidia-pyindex==1.0.9
-openai==1.61.0
-orjson==3.10.15
-packaging==24.2
-petname==2.6
-pexpect==4.9.0
-pluggy==1.5.0
-psycopg2==2.9.10
-ptyprocess==0.7.0
-pycparser==2.22
-pydantic==2.10.6
-pydantic_core==2.27.2
-pygit2==1.17.0
-Pygments==2.19.1
-pyte==0.8.2
-pytest==8.3.4
-pytest-asyncio==0.25.3
-pytest-cov==4.1.0
-pytest-mock==3.12.0
-python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
-pytz==2025.1
-PyYAML==6.0.2
-requests==2.32.3
-requests-toolbelt==1.0.0
-rich==13.9.4
-schedule==1.2.2
-semantic-version==2.10.0
-setuptools==75.8.0
-shell==1.0.1
-shellingham==1.5.4
-six==1.17.0
-sniffio==1.3.1
-SQLAlchemy==2.0.39
-starlette==0.45.3
-syntax-checker==0.3.0
-tenacity==9.0.0
-tokenizers==0.21.0
-toml==0.10.2
-tqdm==4.67.1
-typer==0.15.1
-types-pexpect==4.9.0.20241208
-typing_extensions==4.12.2
-urllib3==2.3.0
-uv==0.5.27
-uvicorn==0.34.0
-wcgw==2.8.9
-wcwidth==0.2.13
-websockets==14.2
-Werkzeug==3.1.3
-wheel==0.45.1
-zenpy==2.0.56
-zstandard==0.23.0
+zenpy>=2.0.24
+openai>=1.0.0
+sqlalchemy>=2.0.0
+psycopg2>=2.9.5
+schedule>=1.1.0
+flask>=2.2.0
+requests>=2.28.0
+python-dotenv>=1.0.0
+ipaddress>=1.0.23
