--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 zenpy>=2.0.24
 openai>=1.0.0
-sqlalchemy>=2.0.0
-psycopg2>=2.9.5
+pymongo>=4.5.0
+motor>=3.3.0
 schedule>=1.1.0
 flask>=2.2.0
 requests>=2.28.0
 python-dotenv>=1.0.0
 ipaddress>=1.0.23
+python-dateutil>=2.8.2
