Add Claude AI integration and fix JSON parsing

--- a/.env.example
+++ b/.env.example
@@ -5,13 +5,14 @@ ZENDESK_SUBDOMAIN=your_zendesk_subdomain
  
 # OpenAI API key 
 OPENAI_API_KEY=your_openai_api_key 
+
+# Anthropic API key
+ANTHROPIC_API_KEY=your_anthropic_api_key
  
-# Database configuration 
-DB_USER=postgres 
-DB_PASSWORD=your_db_password 
-DB_HOST=localhost 
-DB_PORT=5432 
-DB_NAME=zendesk_analytics 
+# MongoDB configuration
+MONGODB_URI=mongodb://localhost:27017
+MONGODB_DB_NAME=zendesk_analytics
+MONGODB_COLLECTION_NAME=ticket_analysis
  
 # Slack integration (optional) 
 SLACK_WEBHOOK_URL=https://hooks.slack.com/services/... 
@@ -19,3 +20,7 @@ SLACK_WEBHOOK_URL=https://hooks.slack.com/services/...
 # Security settings 
 WEBHOOK_SECRET_KEY=your_secure_random_key_here 
 ALLOWED_IPS=127.0.0.1,10.0.0.0/24 
+
+# Feature flags
+# Set to 'true' to disable automatic tag updates on tickets
+DISABLE_TAG_UPDATES=false
