Comprehensive test infrastructure improvements

--- a/pytest.ini
+++ b/pytest.ini
@@ -23,7 +23,7 @@ filterwarnings =
     ignore::ImportWarning
 asyncio_mode = auto
 asyncio_default_fixture_loop_scope = function
-xvs_output = true
+# xvs_output = true  # Commented out as it's causing a warning
 log_cli = true
 log_cli_level = INFO
 log_cli_format = %(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)
