--- a/.env.example
+++ b/.env.example
@@ -1,49 +1,40 @@
-# Zendesk API credentials 
-ZENDESK_EMAIL=your_email@company.com 
-ZENDESK_API_TOKEN=your_zendesk_api_token 
-ZENDESK_SUBDOMAIN=your_zendesk_subdomain 
- 
-# OpenAI API key (required for GPT-4o and GPT-3.5 Turbo)
-OPENAI_API_KEY=your_openai_api_key 
+# Zendesk API credentials
+ZENDESK_EMAIL=your_email@company.com
+ZENDESK_API_TOKEN=your_zendesk_api_token
+ZENDESK_SUBDOMAIN=your_zendesk_subdomain
 
-# Anthropic API key (required for Claude models)
+# AI API keys (at least one is required)
+OPENAI_API_KEY=your_openai_api_key
 ANTHROPIC_API_KEY=your_anthropic_api_key
- 
+
 # MongoDB configuration
+# For local MongoDB instance
 MONGODB_URI=mongodb://localhost:27017
+# For MongoDB Atlas (cloud)
+# MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/?retryWrites=true&w=majority
 MONGODB_DB_NAME=zendesk_analytics
 MONGODB_COLLECTION_NAME=ticket_analysis
 
-# MongoDB connection options
-MONGODB_MAX_POOL_SIZE=100
-MONGODB_TIMEOUT_MS=5000
-MONGODB_RETRY_WRITES=true
- 
-# Slack integration (optional) 
-SLACK_WEBHOOK_URL=https://hooks.slack.com/services/... 
- 
-# Security settings 
-WEBHOOK_SECRET_KEY=your_secure_random_key_here 
-ALLOWED_IPS=127.0.0.1,10.0.0.0/24 
+# Slack integration (optional)
+SLACK_WEBHOOK_URL=https://hooks.slack.com/services/your-slack-webhook-url
+
+# Security settings
+WEBHOOK_SECRET_KEY=your_secure_random_key_here
+ALLOWED_IPS=127.0.0.1,10.0.0.0/24
 
 # Feature flags
-# Set to 'true' to disable automatic tag updates on tickets
-DISABLE_TAG_UPDATES=false
+DISABLE_TAG_UPDATES=true
 
-# Cache configuration
-CACHE_TTL_SECONDS=3600
-VIEWS_CACHE_TTL_SECONDS=7200
-TICKETS_CACHE_TTL_SECONDS=1800
-
-# Logging configuration
-LOG_LEVEL=INFO
-LOG_FILE=zendesk_ai.log
+# Caching settings
+VIEWS_CACHE_TTL_SECONDS=900
+TICKETS_CACHE_TTL_SECONDS=300
+USER_CACHE_TTL_SECONDS=1800
 
 # Performance settings
-MAX_WORKERS=4
+MAX_WORKER_THREADS=5
 BATCH_SIZE=10
-REQUEST_TIMEOUT=30
+SHOW_PROGRESS_BAR=true
 
-# Report settings
-DEFAULT_REPORT_FORMAT=enhanced
-DEFAULT_DAYS_LOOKBACK=7
+# Logging settings
+LOG_LEVEL=INFO
+LOG_FILE=zendesk_ai.log
